# cuda_practice

./: CMakeLists.txt  README.md
basic/: CMakeLists.txt
basic/src/: cuda_steam.cu  cuda_stream.cuh  exec_device_info.cc  exec_hello.cu  exec_index.cu  exec_matmul.cc  exec_memory.cc  exec_rgb_yuv.cu  exec_stream.cc  gelu.cu  gelu.cuh  matmul.cu  matmul.h
utils/: CMakeLists.txt
utils/src/: timer.cc  timer.h  utils.h
